[project]
name = "comfyui-post-processing-nodes"
description = "A collection of post processing nodes for ComfyUI, which enable a variety of visually striking image effects"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/EllangoK/ComfyUI-post-processing-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ellangok"
DisplayName = "ComfyUI-post-processing-nodes"
Icon = ""
